--- a/pagina_web/css/main.css
+++ b/pagina_web/css/main.css
@@ -103,10 +103,10 @@ nav ul li {
 }
 
 .contact-info li.phone a {
-	background-image: url(../img/phone.png);
+	background-image: url('../img/phone.png');
 }
 .contact-info li.mail a {
-	background-image: url(../img/mail.png);
+	background-image: url('../img/mail.png');
 
 }
 .contact-info li.facebook a {
